alpm-db/tests/snapshots/desc_cli__format__format__json_pretty__case_1.snap
---
source: alpm-db/tests/desc_cli.rs
description: alpm-db-desc format --output-format json --pretty
expression: json
---
{
  "name": "foo",
  "version": {
    "pkgver": "1.0.0",
    "epoch": null,
    "pkgrel": {
      "major": 1,
      "minor": null
    }
  },
  "base": "foo",
  "description": "An example package",
  "url": "https://example.org/",
  "arch": "x86_64",
  "builddate": 1733737242,
  "installdate": 1733737243,
  "packager": {
    "name": "Foobar McFooface",
    "email": "foobar@mcfooface.org"
  },
  "size": 123,
  "groups": [
    "utils",
    "cli"
  ],
  "reason": "Depend",
  "license": [
    "MIT",
    "Apache-2.0"
  ],
  "validation": "Pgp",
  "replaces": [
    {
      "name": "pkg-old",
      "version_requirement": null
    },
    {
      "name": "pkg-old2",
      "version_requirement": null
    }
  ],
  "depends": [
    {
      "name": "glibc",
      "version_requirement": null
    },
    {
      "name": "glibc2",
      "version_requirement": null
    }
  ],
  "optdepends": [
    {
      "package_relation": {
        "name": "optpkg",
        "version_requirement": null
      },
      "description": "description of optpkg"
    },
    {
      "package_relation": {
        "name": "optpkg2",
        "version_requirement": null
      },
      "description": null
    }
  ],
  "conflicts": [
    {
      "name": "foo-old",
      "version_requirement": null
    },
    {
      "name": "foo-old2",
      "version_requirement": null
    }
  ],
  "provides": [
    {
      "name": "foo-virtual",
      "version_requirement": null
    },
    {
      "name": "foo-virtual2",
      "version_requirement": null
    }
  ]
}
